---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/mut_.nu
---
==== COMPILER ====
0: Variable (4 to 5) "x"
1: Name (7 to 10) "int"
2: Type { name: NodeId(1), args: None, optional: false } (7 to 10)
3: Int (13 to 16) "123"
4: PipeElement { expr: NodeId(3), redirection: None } (13 to 16)
5: Let { variable_name: NodeId(0), ty: Some(NodeId(2)), initializer: NodeId(4), is_mutable: true } (0 to 16)
6: Variable (18 to 20) "$x"
7: Assignment (21 to 22)
8: Int (23 to 24) "3"
9: Plus (25 to 26)
10: Int (27 to 30) "456"
11: BinaryOp { lhs: NodeId(8), op: NodeId(9), rhs: NodeId(10) } (23 to 30)
12: PipeElement { expr: NodeId(11), redirection: None } (23 to 30)
13: BinaryOp { lhs: NodeId(6), op: NodeId(7), rhs: NodeId(12) } (18 to 30)
14: Variable (36 to 37) "y"
15: Name (39 to 42) "int"
16: Type { name: NodeId(15), args: None, optional: false } (39 to 42)
17: Int (45 to 48) "123"
18: PipeElement { expr: NodeId(17), redirection: None } (45 to 49)
19: Pipe (49 to 50)
20: Int (51 to 54) "344"
21: PipeElement { expr: NodeId(20), redirection: None } (51 to 54)
22: Pipeline(PipelineId(0)) (45 to 54)
23: Let { variable_name: NodeId(14), ty: Some(NodeId(16)), initializer: NodeId(22), is_mutable: true } (32 to 54)
24: Variable (56 to 58) "$y"
25: Assignment (59 to 60)
26: Int (61 to 62) "3"
27: Plus (63 to 64)
28: Int (65 to 66) "1"
29: BinaryOp { lhs: NodeId(26), op: NodeId(27), rhs: NodeId(28) } (61 to 66)
30: PipeElement { expr: NodeId(29), redirection: None } (61 to 67)
31: BinaryOp { lhs: NodeId(24), op: NodeId(25), rhs: NodeId(30) } (56 to 67)
32: Block(BlockId(0)) (0 to 68)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(32)
  variables: [ x: NodeId(0), y: NodeId(14) ]
==== TYPES ====
0: int
1: unknown
2: int
3: int
4: int
5: ()
6: int
7: forbidden
8: int
9: forbidden
10: int
11: int
12: int
13: ()
14: int
15: unknown
16: int
17: int
18: int
19: unknown
20: int
21: int
22: int
23: ()
24: int
25: forbidden
26: int
27: forbidden
28: int
29: int
30: int
31: ()
32: ()
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 5): node Let { variable_name: NodeId(0), ty: Some(NodeId(2)), initializer: NodeId(4), is_mutable: true } not suported yet
